# tdad-skill

./: .env.example  .gitignore  LICENSE  PRIVACY.md  README.md  SKILL.md  docker-compose.yml  pyproject.toml
references/: GRAPH_SCHEMA.md  IMPACT_STRATEGIES.md  REFERENCE.md
src/tdad/: __init__.py  cli.py
src/tdad/analyzer/: impact.py
src/tdad/core/: config.py  graph_db.py  graph_nx.py  schema.py
src/tdad/indexer/: ast_parser.py  graph_builder.py  test_linker.py
src/tdad/languages/: __init__.py  _treesitter_base.py  base.py  dart.py  go.py  java.py  javascript.py  python.py  rust.py
src/tdad/languages/queries/: dart.scm  go.scm  java.scm  javascript.scm  rust.scm  typescript.scm
src/tdad/runner/: test_runner.py
tests/: conftest.py  test_ast_parser.py  test_cli.py  test_dart_parser.py  test_go_parser.py  test_graph_builder.py  test_impact_analyzer.py  test_java_parser.py  test_javascript_parser.py  test_rust_parser.py  test_test_linker.py
tests/fixtures/sample_dart_repo/: pubspec.yaml
tests/fixtures/sample_dart_repo/lib/: calculator.dart  utils.dart
tests/fixtures/sample_dart_repo/test/: calculator_test.dart  utils_test.dart
tests/fixtures/sample_go_repo/calculator/: calculator.go  calculator_test.go
tests/fixtures/sample_go_repo/utils/: utils.go  utils_test.go
tests/fixtures/sample_java_repo/: pom.xml
tests/fixtures/sample_js_repo/: package.json
tests/fixtures/sample_js_repo/src/: calculator.js  utils.js
tests/fixtures/sample_js_repo/tests/: calculator.test.js  utils.test.js
tests/fixtures/sample_repo/src/: calculator.py  utils.py
(+9 files in other folders)
