[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tdad"
version = "0.1.0"
description = "Test-Driven AI Development: GraphRAG-powered test impact analysis for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Rafael Alonso", email = "pepealonso95@gmail.com" },
]
keywords = ["tdd", "graphrag", "testing", "ai", "neo4j", "regression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "neo4j>=5.14.0",
    "pydantic-settings>=2.0.0",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
coverage = ["coverage>=7.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
]

[project.scripts]
tdad = "tdad.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tdad"]

[tool.pytest.ini_options]
testpaths = ["tests"]
